--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,3 @@
 [env]
 LIBTORCH="/opt/libtorch"
-LD_LIBRARY_PATH="/opt/libtorch/lib:$LD_LIBRARY_PATH"
-PATH="/opt/libtorch/lib:$PATH"
-
+LD_LIBRARY_PATH="${LIBTORCH}/lib:${LD_LIBRARY_PATH}"
